--- a/retilla/Base.lproj/Main.storyboard
+++ b/retilla/Base.lproj/Main.storyboard
@@ -642,28 +642,97 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64H-rM-x4P">
-                                <rect key="frame" x="166.5" y="323" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="l7w-sW-K1b">
+                                <rect key="frame" x="30" y="374.5" width="118" height="203.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="postStory" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64H-rM-x4P">
+                                        <rect key="frame" x="0.0" y="0.0" width="75" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hashtag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uEB-P3-b4W">
+                                        <rect key="frame" x="0.0" y="30.5" width="62" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="coordinates" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fmn-Es-CY0">
+                                        <rect key="frame" x="0.0" y="61" width="90.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="imageUrl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dob-C9-rmR">
+                                        <rect key="frame" x="0.0" y="91.5" width="69" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YBw-UA-qlE">
+                                        <rect key="frame" x="0.0" y="122" width="34" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQ3-xG-74y">
+                                        <rect key="frame" x="0.0" y="152.5" width="76" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sectionNumber" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbS-cL-FW6">
+                                        <rect key="frame" x="0.0" y="183" width="118" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CVU-Hk-pW4">
+                                <rect key="frame" x="39" y="38" width="34" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="cuV-Ks-oDx"/>
+                                </constraints>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="backBtnTapped:" destination="AdO-GU-xS3" eventType="touchUpInside" id="LEb-7i-kTb"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="mdZ-WK-qsu">
+                                <rect key="frame" x="141" y="111" width="85" height="73"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="73" id="NWD-r9-mzl"/>
+                                    <constraint firstAttribute="width" constant="85" id="k1P-Ua-h3D"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.33114862849999999" green="0.88354616119999996" blue="0.20916114080000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="64H-rM-x4P" firstAttribute="centerX" secondItem="kZ1-jk-EXf" secondAttribute="centerX" id="IbM-ln-E2T"/>
-                            <constraint firstItem="64H-rM-x4P" firstAttribute="centerY" secondItem="kZ1-jk-EXf" secondAttribute="centerY" id="tKK-hr-TQv"/>
+                            <constraint firstItem="CVU-Hk-pW4" firstAttribute="leading" secondItem="4ba-S1-df5" secondAttribute="leading" constant="39" id="0WJ-MJ-unV"/>
+                            <constraint firstItem="mdZ-WK-qsu" firstAttribute="top" secondItem="4ba-S1-df5" secondAttribute="top" constant="91" id="3DC-r8-sW0"/>
+                            <constraint firstItem="mdZ-WK-qsu" firstAttribute="leading" secondItem="4ba-S1-df5" secondAttribute="leading" constant="141" id="8oi-2I-07d"/>
+                            <constraint firstItem="l7w-sW-K1b" firstAttribute="leading" secondItem="4ba-S1-df5" secondAttribute="leading" constant="30" id="BYp-2o-Efp"/>
+                            <constraint firstItem="4ba-S1-df5" firstAttribute="bottom" secondItem="l7w-sW-K1b" secondAttribute="bottom" constant="40" id="F9A-2u-Xzg"/>
+                            <constraint firstItem="CVU-Hk-pW4" firstAttribute="top" secondItem="4ba-S1-df5" secondAttribute="top" constant="18" id="pla-iS-Zzh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4ba-S1-df5"/>
                     </view>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="descLabel" destination="64H-rM-x4P" id="WtL-2r-D4P"/>
+                        <outlet property="coordinatesLbl" destination="Fmn-Es-CY0" id="Vtz-Hn-9kw"/>
+                        <outlet property="hashtagLbl" destination="uEB-P3-b4W" id="KXr-FF-sUP"/>
+                        <outlet property="imageLbl" destination="mdZ-WK-qsu" id="Phs-AO-C3S"/>
+                        <outlet property="imageUrlLbl" destination="Dob-C9-rmR" id="yPg-z0-W1A"/>
+                        <outlet property="likesLbl" destination="YBw-UA-qlE" id="vYz-qq-KpI"/>
+                        <outlet property="postStoryLbl" destination="64H-rM-x4P" id="ecx-C1-BOn"/>
+                        <outlet property="sectionNumberLbl" destination="xbS-cL-FW6" id="qdg-HS-gJ5"/>
+                        <outlet property="usernameLbl" destination="vQ3-xG-74y" id="GbD-pv-RWl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Hb-Dq-Owp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4662" y="-188"/>
+            <point key="canvasLocation" x="4661.6000000000004" y="-188.45577211394306"/>
         </scene>
         <!--FeedVCC-->
         <scene sceneID="up7-XT-ZhS">
@@ -885,6 +954,7 @@
     <resources>
         <image name="beach" width="802" height="451"/>
         <image name="hear2" width="740" height="720"/>
+        <image name="heart" width="2400" height="2186"/>
         <image name="icons8-topic-50" width="50" height="50"/>
     </resources>
 </document>
